--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="webfonts/ss-glyphish-filled.css" rel="stylesheet" />
     <link href="webfonts/ss-social-circle.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&family=Spectral+SC:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -56,7 +57,7 @@
         <nav class="navbar" id="top1">
             <div class="logoBurger">
                 <a href="#top1" style="color: black;">
-                <p>John Wise</a></p>
+                <p>J Wise</a></p>
                 <svg class="hamburger" id="js-hamburger" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 11.4477 2.44772 11 3 11H21C21.5523 11 22 11.4477 22 12C22 12.5523 21.5523 13 21 13H3C2.44772 13 2 12.5523 2 12Z" fill="black"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M2 6C2 5.44772 2.44772 5 3 5H21C21.5523 5 22 5.44772 22 6C22 6.55228 21.5523 7 21 7H3C2.44772 7 2 6.55228 2 6Z" fill="black"/>
@@ -78,8 +79,8 @@
 
     <div class="p1-container">
         <div class="p1-headpad"></div>
-        <div class="p1-item-a"><p style="font-size: 100%;"> <b>John Wise</b> is a <b>UX Designer</b>
-            based in <b>San Francisco</b></p></div>
+        <div class="p1-item-a"><p style="font-size: 100%;"> <span class="johnWise">John Wise</span> <span class="noBreak">is a </span> <span class="headerOutline" style=""><b>UX Designer</b></span>
+            <span class="noBreak">based in</span> <span class="headerOutline2" style="">San Francisco</span></p></div>
         <div class="p1-item-b" data-tilt>
             <!--
             <a href="">
@@ -109,7 +110,7 @@
         -->
         </div>
         <div class="p1-item-c">
-            <p>John is a UX/UI Designer based in San Francisco. John’s work combines 
+            <p>John’s work combines 
                 his design work in UX/UI with his backgroud in experimental animation 
                 and video and his interest in interactive technology. John is currently 
                 working as a freelancer in the SF Bay Area.</p>
@@ -117,7 +118,9 @@
             <button>Download Resume</button>
 -->
         </div>
+        <!--
         <div class="p1-item-e"></div>
+        -->
         <div class="p1-footpad"></div>
     
     </div>
