--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <ul class="jwmenu" id="js-jwmenu">
                 <li class="menuitem"><a href="#work1">Work</a></li>
                 <li class="menuitem"><a href="#about1">About</a></li>
+                <li class="menuitem"><a href="files/John-Wise-UX-UI-Resume.pdf" target="_blank">Resume</a></li>
 <!--
                 <li class="menuitem"><a href="#contact1">Contact</a></li>
 -->
